# Copyright 2011-2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cmake_minimum_required(VERSION 3.7)
project(tools CXX)

## Utility library for implementing sub-commands
#add_library(binexport_command_util
#  command_util.h
#  command_util.cc
#)
#target_link_libraries(binexport_command_util PRIVATE
#  absl::flags_parse
#  absl::status
#  absl::str_format
#  binexport_base
#)

# Entry point for BinExport command-line utilities.
add_executable(binexport binexport_main.cc
  ../version.h
  ${CMAKE_CURRENT_BINARY_DIR}/../version.cc
)
target_link_libraries(binexport PRIVATE
  absl::flags_parse
  absl::status
  absl::str_format
  binexport_base
  binexport_shared
)
install(TARGETS binexport RUNTIME DESTINATION binexport-prefix)

# Dummy command that does (mostly) nothing. Used for tests.
add_executable(binexport-dummy binexport_dummy.cc)
target_link_libraries(binexport-dummy PRIVATE
  absl::flags_parse
  absl::status
  absl::str_format

  binexport_base
)

add_executable(binexport2dump binexport2dump.cc)
target_link_libraries(binexport2dump
  absl::flat_hash_map
  absl::hash
  absl::str_format
  absl::time
  binexport_base
  binexport_shared
)
install(TARGETS binexport2dump RUNTIME DESTINATION binexport-prefix)
